# maritime

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  cleanlibais  cleanup  config.status  configure  configure.ac  configure.win
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  ais_decode.R  ais_example_data.R  ais_msgs.R  maritime-package.R  maritime_options.R  utils.R  zzz.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/reference/: ais_decode_filter.html  ais_decode_nmea.html  ais_msgs.html  ais_version.html  example_nmea_file.html  index.html  libais_version.html  maritime_options.html
inst/: COPYRIGHTS
inst/include/: libais.hpp
inst/test-data/: segfaults
man/: ais_decode_filter.Rd  ais_decode_nmea.Rd  ais_msgs.Rd  ais_version.Rd  example_nmea_file.Rd  libais_version.Rd  maritime_options.Rd
man-roxygen/: param-as_df.R  param-as_sf.R  param-as_tibble.R  param-verbose.R
playground/: filter.Rmd  filter.html  rbindlist.Rmd  rbindlist.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RcppExports.cpp  ais.h  ais_bitset.cpp  hello-world.cpp  libais-decode.cpp  libais-versions.cpp  maritime-ais-msgs.h  maritime-ais-msgs.hpp  maritime-ais.h  maritime-ais.hpp  maritime-ais_decode.cpp  maritime-ais_stream.h  maritime-decode.cpp  maritime-omp.h  maritime-regex.cpp  maritime-typedefs.h  maritime-utils.h  maritime-utils.hpp  maritime.h  queue.cpp
src/maritime/: decoder.hpp  (+9 more)
tests/: testthat.R
(+31 files in other folders)
